--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Progetto_Sistematica</string>
+    <string name="Disconnesso">Disconnesso</string>
+    <string name="Connesso">Connesso</string>
 </resources>
