Aggiunte e Fix vari
Migrazione progetto ad AndroidX
Aggiunta Toolbar
Aggiunte impostazioni applicazione, menu, SharedPreferences per salvare i vari delay dei comandi e delle CircleBar scelti dall'utente tramite le impostazioni
Rimosso codice non più utilizzato
Ottimizzato lo spazio utilizzato nello schermo, ora le varie Activity risultano più pulite grazie alla separazione delle configurazioni tramite le impostazioni
Ottimizzazioni varie e fix generali

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">Progetto_Sistematica</string>
+    <string name="title_activity_settings">SettingsActivity</string>
+
+    <!-- Preference Titles -->
+    <string name="setting_base">Impostazioni base</string>
+    <string name="setting_advanced">Impostazioni avanzate</string>
+    <string name="sync_header">Sync</string>
+
+    <!-- Messages Preferences -->
+    <string name="signature_title">Cambia timeout comandi</string>
+    <string name="reply_title">Default reply action</string>
+
 </resources>
